<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_edit_browser"
          android:icon="@drawable/ic_action_edit"
          android:title="@string/action_edit" />
    <item android:id="@+id/action_link_to_browser"
          android:icon="@drawable/ic_action_forward"
          android:title="@string/action_link_to" />
    <item android:id="@+id/action_link_from_browser"
          android:icon="@drawable/ic_action_backward"
          android:title="@string/action_link_from" />
    <item android:id="@+id/action_delete_browser"
          android:icon="@drawable/ic_action_discard"
          android:title="@string/action_delete"/>
    <item android:id="@+id/action_exe_browser"
          android:title="@string/action_exe"/>
</menu>