<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_add_browser"
          android:icon="@drawable/ic_action_new"
          android:title="@string/action_new"
          android:showAsAction="ifRoom" />
    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_search_browser"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_search"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_multiselect_browser"
          android:icon="@drawable/ic_action_dial_pad"
          android:title="@string/action_multiselect"
          android:showAsAction="ifRoom" />
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
          android:icon="@drawable/ic_action_settings"
          android:title="@string/action_settings"
          android:showAsAction="never" />
</menu>